# souffle-lib

./: .gitignore  LICENSE  Makefile  README.md  README.org  configure.ac  datetime.cpp.in  datetime.dl  lib_ldscript  math.dl.in  math_32.dl  math_64.dl  movie.dl  movie.sql  rosetta.dl  test.dl.in  test_32.dl  test_64.dl  test_datetime.dl
